--- a/docs/migration-guides/external-providers-primitives-v2.mdx
+++ b/docs/migration-guides/external-providers-primitives-v2.mdx
@@ -8,11 +8,7 @@ description: Migrate to the primitives interface in external providers
 
 ## Why should third-party providers implement primitives?
 
-The evolution of [user access patterns for QPUs](/migration-guides/qiskit-runtime#why-migrate-to-qiskit-runtime-primitives)
-has led to the Qiskit primitives (`Sampler` and `Estimator`) superseding the `backend.run` interface.
-
-After a period of overlap between `backend.run` and primitives, during which users have gradually transitioned to the 
-primitives access model, the `qiskit-ibm-runtime` provider has discontinued access to IBM&reg; QPUs through `backend.run`.
+The Qiskit SDK is built to support third parties in creating external providers of quantum resources. The evolution of [user access patterns for QPUs](/migration-guides/qiskit-runtime#why-migrate-to-qiskit-runtime-primitives) has led to the Qiskit primitives (`Sampler` and `Estimator`) superseding the `backend.run` interface.  To ensure users of Qiskit can seamlessly transition between providers, we encourage all third-party providers to implement native support of the primitives for performant access to their hardware or simulators. 
 
 This guide is for you if the following applies:
 
@@ -36,11 +32,9 @@ expectation values of observables with respect to quantum states, while the `Sam
 obtained from sampling from a quantum state in a QPU. The base interfaces provide methods for execution, querying job status, 
 and returning the job results. See the `qiskit.primitives` [API documentation](/api/qiskit/primitives) for more information.
 
-Once you know which primitive to implement, review the PUB data model for input and output handling. See the following 
-guide for more details on [PUBs](/guides/primitive-input-output#pubs). To handle job status and results, 
-the Qiskit SDK provides [`DataBin`](../api/qiskit/qiskit.primitives.DataBin), 
-[`PubResult`](../api/qiskit/qiskit.primitives.PubResult), [`PrimitiveResult`](../api/qiskit/qiskit.primitives.PrimitiveResult), 
-and [`BasePrimitiveJob`](../api/qiskit/qiskit.primitives.BasePrimitiveJob) objects.
+The Primitive Unified Bloc (PUB) data model defines the input format to the primitives, as described in [Overview of PUBs](https://qiskit.github.io/documentation/pr-2496/guides/primitive-input-output#pubs). While different types of data can be accepted into a PUB, both `SamplerPub` and `EstimatorPub` have a `coerce()` method that can be used to convert them into the respective model. The code snippets below provide an example for each of the primitives.
+
+The [PrimitiveResult](https://qiskit.github.io/documentation/pr-2496/api/qiskit/qiskit.primitives.PrimitiveResult) defines the output of a primitive job. It is comprised of additional data models such as [PubResult](https://qiskit.github.io/documentation/pr-2496/api/qiskit/qiskit.primitives.PubResult) and [DataBin](https://qiskit.github.io/documentation/pr-2496/api/qiskit/qiskit.primitives.DataBin). See [Overview of primitive results](https://docs.quantum.ibm.com/guides/primitive-input-output#overview-of-primitive-results) for more information.
 
 
 An example of custom `Sampler` implementation for a third-party provider might look like:
