--- a/docs/open-source/qiskit-sdk-version-strategy.mdx
+++ b/docs/open-source/qiskit-sdk-version-strategy.mdx
@@ -28,11 +28,12 @@ A tentative release schedule is included below:
 
 ![Tentative Qiskit release schedule](/images/guides/install/release_schedule.avif)
 
-For an up-to-date release schedule, refer to the Qiskit Github project's [milestones list](https://github.com/Qiskit/qiskit/milestones), which will always contain the current release plan.
+For an up-to-date release schedule, refer to the Qiskit GitHub project's [milestones list](https://github.com/Qiskit/qiskit/milestones), which will always contain the current release plan.
 
 With the release of a new major version, the previous major version is supported
-for at least six months; only bug and security fixes are accepted during this time and only patch releases are published for this major version. A final
-patch version is published when support is dropped, and that release 
+for at least six months with only bug fixes, and one year for security fixes. During
+this time only patch releases are published for this major version.
+A final patch version is published when support is dropped, and that release
 also documents the end of support for that major version series. A longer
 support window is needed for the previous major version as this gives downstream
 Qiskit consumers and their users a chance to migrate their code.
