rmv parens for consistency

--- a/docs/migration-guides/qiskit-backend-primitives.mdx
+++ b/docs/migration-guides/qiskit-backend-primitives.mdx
@@ -6,10 +6,10 @@ description: Migrate to primitives for users of third-party providers with `back
 
 # Migrate to primitives for users of third-party providers with `backend.run`
 
-The `backend.run` interface was the primary access point to quantum hardware and simulators offered by third-party providers that integrate with Qiskit. The evolution of [user access patterns for QPUs](/migration-guides/qiskit-runtime#why-migrate-to-qiskit-runtime-primitives) has led to the Qiskit primitives (Sampler and Estimator) superseding this interface. However, not all third-party providers have transitioned to the primitives framework, and `backend.run()` remains in Qiskit for backward compatibility.
+The `backend.run` interface was the primary access point to quantum hardware and simulators offered by third-party providers that integrate with Qiskit. The evolution of [user access patterns for QPUs](/migration-guides/qiskit-runtime#why-migrate-to-qiskit-runtime-primitives) has led to the Qiskit primitives (Sampler and Estimator) superseding this interface. However, not all third-party providers have transitioned to the primitives framework, and `backend.run` remains in Qiskit for backward compatibility.
 
 This guide is for you if you have written or want to write code using `Sampler` and `Estimator` 
-primitives but need to interact with a provider that still relies on `backend.run()`. If you are a 
+primitives but need to interact with a provider that still relies on `backend.run`. If you are a 
 provider developer looking to implement and expose your own `Sampler` and 
 `Estimator` primitives, you can find guidance in the [Migrate provider interfaces from backend.run to primitives](/migration-guides/external-providers-primitives-v2) guide.  
 
@@ -29,14 +29,14 @@ The two main differences with the implementations of [`SamplerV2`](/api/qiskit-i
 and [`EstimatorV2`](/api/qiskit-ibm-runtime/estimator-v2) are:
 
 1.  The `backend` input passed during the "backend primitive" instantiation. This input argument allows access 
-to the internal provider through `backend.run()` and should not be confused
+to the internal provider through `backend.` and should not be confused
 with the `mode` input argument of [`SamplerV2`](/api/qiskit-ibm-runtime/sampler-v2) 
 and [`EstimatorV2`](/api/qiskit-ibm-runtime/estimator-v2).
 
 2. What `options` can be set. Options should be provided as a `dict` instead of an `Options` instance.
 `BackendSamplerV2` includes `default_shots`, `seed_simulator` and `run_options`;
 `BackendEstimatorV2` includes `default_precision`, `abelian_grouping`, `seed_simulator` and `run_options`.
-The `run_options` field defines the options to pass through to the `.run()` method of the wrapped backend instance.
+The `run_options` field defines the options to pass through to the `.` method of the wrapped backend instance.
 
 Note that because these wrappers are independent of `qiskit_ibm_runtime`, they do not offer access to execution
 modes (`Session`/`batch`), local testing modes, or any other `qiskit_ibm_runtime`-specific feature. These are up to the
@@ -48,7 +48,7 @@ strategy that is not covered by the out-of-the-box wrapper, it is always possibl
 interface needs.
 
 The following is an example usage of the [`BackendSamplerV2`](/api/qiskit/qiskit.primitives.BackendSamplerV2) 
-class with a fictional third-party provider backend that only implements `backend.run()`:
+class with a fictional third-party provider backend that only implements `backend.`:
 
 ``` python
 from qiskit import QuantumCircuit, generate_preset_pass_manager
