--- a/docs/guides/qpu-information.mdx
+++ b/docs/guides/qpu-information.mdx
@@ -39,7 +39,7 @@ The revision version number will increment for fixes that do not break the exist
 
 ## QPU configuration values
 
-The following is a subset of QPU configuration values available in IBM Quantum Platform and from [Qiskit](/api/qiskit/qiskit.providers.models.BackendConfiguration).
+The following is a subset of QPU configuration values available in IBM Quantum Platform and from [Qiskit](/api/qiskit/1.4/qiskit.providers.models.BackendConfiguration).
 
 <LegacyContent>
 These values are shown on both the [Compute resources tab](https://quantum.ibm.com/services/resources) and the details page for each QPU.
