--- a/docs/guides/simulate-with-qiskit-sdk-primitives.mdx
+++ b/docs/guides/simulate-with-qiskit-sdk-primitives.mdx
@@ -272,8 +272,8 @@ For a full example, see the [Primitives examples](./primitives-examples#sampler-
 <Admonition type="tip" title="Recommendations">
   - For higher-performance simulation that can handle larger circuits, or to incorporate noise models into your simulation, see [Exact and noisy simulation with Qiskit Aer primitives](simulate-with-qiskit-aer).
   - To learn how to use Quantum Composer for simulation, try the [Explore gates and circuits with the Quantum Composer](https://learning.quantum.ibm.com/tutorial/explore-gates-and-circuits-with-the-quantum-composer) tutorial.
-  - Read the [Qiskit Estimator API](/api/qiskit/qiskit.primitives.Estimator) reference.
-  - Read the [Qiskit Sampler API](/api/qiskit/qiskit.primitives.Sampler) reference.
+  - Read the [Qiskit Estimator API](/api/qiskit/1.4/qiskit.primitives.Estimator) reference.
+  - Read the [Qiskit Sampler API](/api/qiskit/1.4/qiskit.primitives.Sampler) reference.
   - Learn how to run on a QPU in the [Run](./execute-on-hardware) step of the Qiskit patterns workflow.
   - Read [Migrate to V2 primitives](/migration-guides/v2-primitives).
 </Admonition>
