--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -7,13 +7,15 @@
    "source": [
     "# Introduction to Qiskit Functions\n",
     "<LegacyContent>\n",
-    "<Admonition type=\"note\">\n",
-    "This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.]( https://quantum.cloud.ibm.com/docs/guides/functions)\n",
+    "<Admonition type=\"note\" title=\"Notes\">\n",
+    "* This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.]( https://quantum.cloud.ibm.com/docs/guides/functions)\n",
+    "* Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan users. They are in preview release status and subject to change.\n",
     "</Admonition>\n",
     "</LegacyContent>\n",
     "<CloudContent>\n",
-    "<Admonition type=\"note\">\n",
-    "This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/functions)\n",
+    "<Admonition type=\"note\" title=\"Notes\">\n",
+    "* This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/functions)\n",
+    "* Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan users. They are in preview release status and subject to change.\n",
     "</Admonition>\n",
     "</CloudContent>"
    ]
@@ -55,10 +57,6 @@
    "id": "098d8fd4-1558-40df-a1b1-ad70fdef8863",
    "metadata": {},
    "source": [
-    "<Admonition type=\"note\">\n",
-    "Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan users. They are in preview release status and subject to change.\n",
-    "</Admonition>\n",
-    "\n",
     "Qiskit Functions simplify and accelerate utility-scale algorithm discovery and application development, by abstracting away parts of the quantum software development workflow. In this way, Qiskit Functions free up time normally spent hand-writing code and fine-tuning experiments.\n",
     "\n",
     "![Overview of Qiskit Functions](/images/guides/functions/functions-overview.svg)\n",
@@ -81,15 +79,20 @@
     "\n",
     "### Install Qiskit Functions Catalog client\n",
     "\n",
+    "<LegacyContent>\n",
     "1. To start using Qiskit Functions, install the IBM Qiskit Functions Catalog client:\n",
     "\n",
     "    ```\n",
     "    pip install qiskit-ibm-catalog\n",
     "    ```\n",
-    "<LegacyContent>\n",
     "1. Retrieve your API token from the [IBM Quantum account page](https://quantum.ibm.com/account), and activate your Python virtual environment.  See the [installation instructions](/guides/install-qiskit#local) if you do not already have a virtual environment set up.\n",
     "</LegacyContent>\n",
     "<CloudContent>\n",
+    "1. To start using Qiskit Functions, install the IBM Qiskit Functions Catalog client:\n",
+    "\n",
+    "    ```\n",
+    "    pip install qiskit-ibm-catalog\n",
+    "    ```\n",
     "1. Retrieve your API token from the [IBM Quantum Platform dashboard](https://quantum.cloud.ibm.com/), and activate your Python virtual environment.  See the [installation instructions](/guides/install-qiskit#local) if you do not already have a virtual environment set up.\n",
     "</CloudContent>\n",
     "\n",
@@ -181,7 +184,7 @@
    "id": "5154cbea-ccfa-42ea-a9ef-c31699c3b2c0",
    "metadata": {},
    "source": [
-    "4. Once you have authenticated, you can list the functions from the Qiskit Functions Catalog that you have access to:"
+    "4. After you have authenticated, you can list the functions from the Qiskit Functions Catalog that you have access to:"
    ]
   },
   {
@@ -225,7 +228,7 @@
    "source": [
     "### Run enabled functions\n",
     "\n",
-    "Once a catalog object has been instantiated, you can select a function using `catalog.load(provider/function-name)`:"
+    "After a catalog object has been instantiated, you can select a function using `catalog.load(provider/function-name)`:"
    ]
   },
   {
@@ -346,7 +349,7 @@
    "source": [
     "### Retrieve results\n",
     "\n",
-    "Once a program is `DONE`, you can use `job.results()` to fetch the result. This output format varies with each function, so be sure to follow the specific documentation:"
+    "After a program is `DONE`, you can use `job.results()` to fetch the result. This output format varies with each function, so be sure to follow the specific documentation:"
    ]
   },
   {
@@ -373,7 +376,7 @@
    "id": "76c32136-f449-454c-896b-ff9d0edf9abc",
    "metadata": {},
    "source": [
-    "At any time, you can also cancel a job:"
+    "You can also cancel a job at any time:"
    ]
   },
   {
@@ -445,7 +448,7 @@
    "source": [
     "### Fetch error messages\n",
     "\n",
-    "If a program status is `ERROR`, use `job.result()` to fetch the error message to help debug as follows:"
+    "If a program status is `ERROR`, use `job.result()` to fetch the error message as follows:"
    ]
   },
   {
