--- a/docs/guides/ibm-circuit-function.ipynb
+++ b/docs/guides/ibm-circuit-function.ipynb
@@ -7,9 +7,18 @@
    "source": [
     "# IBM Circuit function\n",
     "\n",
-    "<Admonition type=\"note\">\n",
-    "Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan users. They are in preview release status and subject to change.\n",
+    "<LegacyContent>\n",
+    "<Admonition type=\"note\" title=\"Notes\">\n",
+    "* This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.](https://quantum.cloud.ibm.com/docs/guides/ibm-circuit-function)\n",
+    "* Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan users. They are in preview release status and subject to change.\n",
     "</Admonition>\n",
+    "</LegacyContent>\n",
+    "<CloudContent>\n",
+    "<Admonition type=\"note\" title=\"Notes\">\n",
+    "* This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/ibm-circuit-function)\n",
+    "* Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan users. They are in preview release status and subject to change.\n",
+    "</Admonition>\n",
+    "</CloudContent>\n",
     "\n",
     "## Overview\n",
     "\n",
@@ -46,10 +55,10 @@
    "metadata": {},
    "source": [
     "<LegacyContent>\n",
-    "Authenticate using your [API key](http://quantum.ibm.com/), and select the Qiskit Function as follows:\n",
+    "Authenticate using your [API key](http://quantum.ibm.com/) and select the Qiskit Function as follows:\n",
     "</LegacyContent>\n",
     "<CloudContent>\n",
-    "Authenticate using your [API key](http://quantum.cloud.ibm.com/), and select the Qiskit Function as follows:\n",
+    "Authenticate using your [API key](http://quantum.cloud.ibm.com/) and select the Qiskit Function as follows:\n",
     "</CloudContent>"
    ]
   },
