--- a/docs/guides/instances.mdx
+++ b/docs/guides/instances.mdx
@@ -17,26 +17,22 @@ This documentation is relevant to the new IBM Quantum&reg; Platform. If you need
 </CloudContent>
 
 <LegacyContent>
-Access to IBM Quantum&reg; Platform services is controlled by the **instances** (previously called providers) to which you are assigned. An instance is defined by a hierarchical organization of **hub**, **group**, and **project**. A hub is the top level of a given hierarchy (organization) and contains within it one or more groups. These groups are in turn populated with projects. The combination of hub/group/project is called an instance. Users can belong to more than one instance at any given time.
+Access to IBM Quantum Platform services is controlled by the **instances** (previously called providers) to which you are assigned. An instance is defined by a hierarchical organization of **hub**, **group**, and **project**. A hub is the top level of a given hierarchy (organization) and contains within it one or more groups. These groups are in turn populated with projects. The combination of hub/group/project is called an instance. Users can belong to more than one instance at any given time.
 
 <Admonition type="note">
   IBM Cloud&reg; instances are different from IBM Quantum Platform instances.  IBM Cloud does not use the hub/group/project structure for user management. This section describes instances in IBM Quantum Platform. To view and create IBM Cloud instances, visit the [IBM Cloud Quantum Instances page](https://cloud.ibm.com/quantum/instances). Click the name of an instance to see details such as your CRN for that instance, what compute resources are available to you by using that instance, and what jobs you have run on that instance.
 </Admonition>
-</LegacyContent>
 
-<LegacyContent>
 ![Alice, Bob, and Charlie are all in Hub A.  Hub A has Group 1 and 2.  Alice and Bob are in Group 1.  Charlie is in Group 2.  Group 1 has Project X and Y.  Alice is in both projects.  Bob is only in project X.  Group 2 has Project Z.  Charlie is in project Z.  Therefore, Charlie's instance is Hub-A/Group-2/Project-Z.](/images/guides/providers1.avif "Hub / group / project hierarchy")
 
 The hub/group/project hierarchy that makes up an IBM Quantum instance.
 
 Users with a public account automatically belong to the ibm-q/open/main [Open Plan](#open-plan). For organizations outside of IBM&reg;, designated hub or group administrators assign users to instances.
 
-To see the instances to which you have access, look at the bottom of your [Account page](https://quantum.ibm.com/account).
-
-![Screenshot of the Account page.](/images/guides/find-providers1.avif "Instances on the Account page")
+The instances that you can access are listed at the bottom of your [Account page](https://quantum.ibm.com/account).
 </LegacyContent>
 <CloudContent>
-Access to IBM Quantum&reg; Platform services is controlled by the **instances** to which you are assigned. Users can belong to more than one instance at any given time.
+Access to IBM Quantum Platform services is controlled by the **instances** to which you are assigned. Users can belong to more than one instance at any given time.
 
 Users with a public account can create an instance in the [Open Plan](#open-plan). For organizations outside of IBM&reg;, the organization's administrator assigns users to instances.
 
@@ -50,7 +46,7 @@ By default, users who sign up for an IBM Quantum account are assigned to the Ope
 Those using the Open Plan instance have up to 10 minutes total of quantum time per month, which resets at 00:00:00 UTC on the first of each calendar month. Open Plan users can track their usage on the [Platform dashboard,](https://quantum.ibm.com/) [Workloads,](https://quantum.ibm.com/workloads) and [Account](https://quantum.ibm.com/account) pages.
 </LegacyContent>
 <CloudContent>
-Once you have an IBM Cloud account, you can create an instance in the Open Plan and access up to 10 minutes total of quantum time per 28-day rolling window. Open Plan users can track their usage on the [Platform dashboard](https://quantum.cloud.ibm.com/) and the [Workloads](https://quantum.cloud.ibm.com/workloads) pages.
+After you have an IBM Cloud&reg; account, you can create an instance in the Open Plan and access up to 10 minutes total of quantum time per 28-day rolling window. Open Plan users can track their usage on the [Platform dashboard](https://quantum.cloud.ibm.com/) and the [Workloads](https://quantum.cloud.ibm.com/workloads) pages.
 </CloudContent>
 ## View your instances
 
@@ -75,14 +71,11 @@ By default, the Workloads and Compute resources pages display all data across al
  The instance switcher does not appear in the Administration application.
  </Admonition>
 
-If you switch to a different instance, it is remembered the next time you log on and, assuming that it's still a valid instance, information pertaining to that instance is displayed.  By default, the first premium instance you have access to is used.  If you do not have any premium instances, the first open instance is shown.
-<Admonition type="note">
-The "first" instance is determined alphabetically.
-</Admonition>
+If you switch to a different instance, it is remembered the next time you log on and, assuming that it's still a valid instance, information pertaining to that instance is displayed.  By default, the first premium instance you have access to is used.  If you do not have any premium instances, the first (alphabetically) open instance is shown.
 </LegacyContent>
 <CloudContent>
 <Admonition type="note">
- Admins can filter analytics data by instance (as well as by other options) by choosing specific parameters in the Filters card on the [Analytics](https://quantum.cloud.ibm.com/admin/analytics) page.
+ Administrators can filter analytics data by instance (as well as by other options) by choosing specific parameters in the Filters card on the [Analytics](https://quantum.cloud.ibm.com/admin/analytics) page.
  </Admonition>
  </CloudContent>
  <LegacyContent>
@@ -93,7 +86,7 @@ When you execute a task using an IBM Quantum service (for example, sending circu
 
 ## How usage affects job priority within an instance
 <LegacyContent>
-*This section applies to Premium Plan users only, since their access includes multiple instances.* 
+*This section applies to Premium Plan users only, since their access includes multiple instances.*
 </LegacyContent>
 When determining which jobs to run, the [fair-share scheduler](/guides/fair-share-scheduler) takes into account an instance's [usage](/guides/estimate-job-run-time) compared to its allocation. For example, an instance with a large allocation that has already run many jobs, or has run one very long job, might have a lower priority when compared to an instance with a smaller allocation but very low usage.
 <LegacyContent>
@@ -106,12 +99,6 @@ The jobs you run and the jobs run by other collaborators in the same instance co
 If an instance has been marked as "limited" by your administrator (you will see a "**Remaining**" column in the usage area) and the instance exceeds its allocation (defined by your administrator) within the 28-day rolling window, any active workload will continue running (including sessions) but pending workloads will remain in the queue until more time is available. If an instance is not limited and the instance exceeds its allocation, jobs run with that instance are likely to run at a lower priority and experience longer queue times.
 
 An alert displays on an instance's usage when it has exceeded its allocation.
-
-![Collaborator's dashboard view, reflecting an instance that has exceeded its specified limit](/images/guides/instances/exceeded-limit-instance.avif)
-_Collaborator's dashboard view, reflecting an instance that has exceeded its specified limit_
-
-![Collaborator's dashboard view, reflecting an instance (with no limit specified) that has exceeded its allocation](/images/guides/instances/exceeded-allocation-instance.avif)
-_Collaborator's dashboard view, reflecting an instance (with no limit specified) that has exceeded its allocation_
 </LegacyContent>
 <CloudContent>
 If an instance has been marked as "limited" by your administrator (you will see a "**Remaining**" column in the usage area) and the instance exceeds its allocation (defined by your administrator) within the 28-day rolling window, active and pending workloads might be canceled. If an instance is not limited and the instance exceeds its allocation, jobs run with that instance are likely to run at a lower priority and experience longer queue times.
