--- a/docs/support.mdx
+++ b/docs/support.mdx
@@ -18,9 +18,9 @@ This documentation is relevant to the new IBM Quantum&reg; Platform. If you need
 
 ## Get help with Qiskit and IBM Quantum Platform
 
-<Admonition type="caution" title="Login issue">
+<Admonition type="caution" title="Having trouble logging in?">
 
-If you log in to IBM Quantum&reg; Platform but are returned to the login screen, first check whether you have access to the [Support center.](https://cloud.ibm.com/unifiedsupport/supportcenter)
+If you get an error when you create an IBM Cloud&reg; account, first check whether you have access to the [Support center.](https://cloud.ibm.com/unifiedsupport/supportcenter)
 
 - If you do have access, click on "create case", selecting *Account* as the Topic and *Account verification* as the Subtopic.
 - If you do not have access, contact Support by calling 1-866-325-0045 and selecting the third option.
