--- a/docs/guides/online-lab-environments.mdx
+++ b/docs/guides/online-lab-environments.mdx
@@ -22,9 +22,9 @@ In addition to downloading and installing Qiskit to work on your local machine, 
 
 Several providers offer online Jupyter environments with Qiskit preinstalled for fast and convenient onboarding. These recommended providers include the cloud service provider OVHcloud and the quantum software development cloud platform qBraid.
 
-Additional online Jupyter notebook environments like IBM Watson&reg; Studio, Google Colab, and Microsoft Azure Machine Learning Studio can be used to work with Qiskit by following the instructions below.
-
 ## Recommended notebook environments with Qiskit preinstalled
+
+Additional online Jupyter notebook environments like IBM Watson&reg; Studio, Google Colab, and Microsoft Azure Machine Learning Studio can be used to work with Qiskit by following the appropriate instructions.
 
 ### OVHcloud AI notebooks
 
