--- a/docs/guides/kipu-optimization.ipynb
+++ b/docs/guides/kipu-optimization.ipynb
@@ -16,18 +16,17 @@
     "# Iskay Quantum Optimizer - A Qiskit Function by Kipu Quantum\n",
     "\n",
     "<LegacyContent>\n",
-    "<Admonition type=\"note\">\n",
-    "This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.]( https://quantum.cloud.ibm.com/docs/guides/kipu-optimization)\n",
+    "<Admonition type=\"note\" title=\"Notes\">\n",
+    "* This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.]( https://quantum.cloud.ibm.com/docs/guides/kipu-optimization)\n",
+    "* Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan users. They are in preview release status and subject to change.\n",
     "</Admonition>\n",
     "</LegacyContent>\n",
     "<CloudContent>\n",
-    "<Admonition type=\"note\">\n",
-    "This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/kipu-optimization)\n",
+    "<Admonition type=\"note\" title=\"Notes\">\n",
+    "* This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/kipu-optimization)\n",
+    "* Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan users. They are in preview release status and subject to change.\n",
     "</Admonition>\n",
     "</CloudContent>\n",
-    "<Admonition type=\"note\">\n",
-    "  Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan users. They are in preview release status and subject to change.\n",
-    "</Admonition>\n",
     "\n",
     "## Overview\n",
     "\n",
@@ -685,7 +684,7 @@
    "source": [
     "## Get support\n",
     "\n",
-    "To get support, please contact support@kipu-quantum.com."
+    "For support, contact support@kipu-quantum.com."
    ]
   },
   {
