--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -185,10 +185,10 @@ Visit the newest content in the documentation!
 
 **Content additions and improvements**
 <LegacyContent>
-- Guidance on how to [securely manage your API token](/guides/setup-channel#set-up-to-use-ibm-quantum-platform), as part of the guide to set up an IBM Quantum channel
+- Guidance to [securely manage your API token](/guides/setup-channel#set-up-to-use-ibm-quantum-platform), as part of the guide to set up an IBM Quantum channel
 </LegacyContent>
 <CloudContent>
-- Guidance on how to [securely manage your API token](/guides/cloud-setup)
+- Guidance to [securely manage your API key](/guides/cloud-setup)
 </CloudContent>
 - Revisions by Qunasys to the Qiskit Functions [QURI Chemistry](/guides/qunasys-quri-chemistry) guide
 
