--- a/docs/guides/primitives-rest-api.mdx
+++ b/docs/guides/primitives-rest-api.mdx
@@ -7,6 +7,17 @@ description: How to use the Sampler and Estimator primitives with Qiskit Runtime
 
 # Primitives with REST API
 
+<LegacyContent>
+<Admonition type="note">
+This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.](https://quantum.cloud.ibm.com/docs/guides/primitives-rest-api)
+</Admonition>
+</LegacyContent>
+<CloudContent>
+<Admonition type="note">
+This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/primitives-rest-api)
+</Admonition>
+</CloudContent>
+
 The steps in this topic describe how to run and configure primitive workloads with REST API, and demonstrate how to invoke them in any program of your choice.
 
 <Admonition type="note">
