Add deprecations to dynamic circuits pg

--- a/docs/guides/classical-feedforward-and-control-flow.ipynb
+++ b/docs/guides/classical-feedforward-and-control-flow.ipynb
@@ -34,6 +34,17 @@
    "id": "0767b203-ad69-428f-b8c1-50ceab758b35",
    "metadata": {},
    "source": [
+    "<Admonition type=\"caution\" title=\"Deprecations to accelerate the new version of dynamic circuits\">\n",
+    "\n",
+    "Starting 2 June 2025 and continuing through the year, IBM Quantum&reg; will begin a gradual rollout of new features to dynamic circuits that will enable them at the utility scale. See the [announcement](https://docs.quantum.ibm.com/announcements/product-updates/2025-03-03-new-version-dynamic-circuits) for more details.\n",
+    "\n",
+    "To accelerate the rollout, the following have been deprecated:\n",
+    "\n",
+    "- The `while`, `for`, and `switch` control flow constructs\n",
+    "- The ability to use control flow instructions inside the body of a branch (as in, nested control flow)\n",
+    "- Conditional measurements\n",
+    "</Admonition>\n",
+    "\n",
     "This guide demonstrates the functionality available in the Qiskit SDK for performing classical feedforward and control flow. These features are sometimes referred to collectively as \"dynamic circuits.\" Classical feedforward refers to the ability to measure qubits in the middle of a circuit and perform additional quantum operations that depend on the measurement outcome. Qiskit supports four control flow constructs for classical feedforward, each implemented as a method on [`QuantumCircuit`](../api/qiskit/qiskit.circuit.QuantumCircuit). The constructs and their corresponding methods are:\n",
     "\n",
     "- If statement - [`QuantumCircuit.if_test`](../api/qiskit/qiskit.circuit.QuantumCircuit#if_test)\n",
