--- a/docs/guides/qiskit-code-assistant-vscode.mdx
+++ b/docs/guides/qiskit-code-assistant-vscode.mdx
@@ -41,9 +41,7 @@ Install directly from VS Code:
 
 Alternatively, the extension is also available through the [VS Code Marketplace](https://marketplace.visualstudio.com/items?itemName=qiskit.qiskit-vscode).
 
-The extension loads automatically and is listed on the bottom of the VS Code window, as shown.  If it is not listed, reload the extension or application.
-
-![Qiskit Code Assistant is shown on the bottom of the VS Code window.](/images/guides/qiskit-code-assistant/vscode-selected-model.avif)
+The extension loads automatically and is listed on the bottom of the VS Code window.  If it is not listed, reload the extension or application.
 
 ## Configure extension settings
 
@@ -68,11 +66,7 @@ After installing the extension, it tries to authenticate you. By default, the pa
 </CloudContent>
 By default, the extension uses the `granite-8b-qiskit` model, which is listed in the Model Picker in the bottom status bar.
 
-![The bottom status bar is shown, with `granite-8b-qiskit` listed.](/images/guides/qiskit-code-assistant/vscode-selected-model.avif)
-
-The first time you use the `granite-8b-qiskit` model, a modal opens listing some major restrictions that you should be aware of when using the model. Clicking `Accept` will accept the disclaimer and enable the model for code generation.
-
-![The window that opens upon first use contains restrictions that must be accepted.](/images/guides/qiskit-code-assistant/eula.avif)
+The first time you use the `granite-8b-qiskit` model, a modal opens listing some major restrictions that you should be aware of when using the model. Click **Accept** to enable the model for code generation.
 
 ### Generate code
 
