--- a/docs/guides/serverless-first-program.ipynb
+++ b/docs/guides/serverless-first-program.ipynb
@@ -56,7 +56,7 @@
    "id": "b32bff85-1760-4296-8f5b-ea6e5c942bbe",
    "metadata": {},
    "source": [
-    "This example demonstrates how to use `qiskit-serverless` tools to create a parallel transpilation program, and then implement `qiskit-ibm-catalog` to deploy your program to IBM Quantum&reg; Platform to use as a reusable remote service."
+    "This example demonstrates how to use `qiskit-serverless` tools to create a parallel transpilation program, and then implement `qiskit-ibm-catalog` to deploy your program to IBM Quantum; Platform to use as a reusable remote service."
    ]
   },
   {
@@ -68,7 +68,7 @@
     "\n",
     "Start with the following example that transpiles a `circuit` against a given `backend` and target `optimization_level`, and gradually add more elements to deploy your workload to Qiskit Serverless.\n",
     "\n",
-    "Put the following code cell in the file `./source_files/transpile_remote.py`. This file is the program we'll upload to Qiskit Serverless."
+    "Put the following code cell in the file `./source_files/transpile_remote.py`. This file is the program to upload to Qiskit Serverless."
    ]
   },
   {
