--- a/docs/guides/run-jobs-session.mdx
+++ b/docs/guides/run-jobs-session.mdx
@@ -7,23 +7,19 @@ description: How to run a quantum computing job in a Qiskit Runtime session.
 # Run jobs in a session
 
 <LegacyContent>
-<Admonition type="note">
-This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.](https://quantum.cloud.ibm.com/docs/guides/run-jobs-session)
+<Admonition type="note" title="Notes">
+* This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.](https://quantum.cloud.ibm.com/docs/guides/run-jobs-session)
+* Session execution mode is not supported in the Open Plan. Jobs will run in job mode instead.
 </Admonition>
 </LegacyContent>
 <CloudContent>
-<Admonition type="note">
-This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/run-jobs-session)
+<Admonition type="note" title="Notes">
+* This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/run-jobs-session)
+* Open Plan users cannot submit session jobs. Workloads must be run in [job mode](/guides/execution-modes#job-mode) or [batch mode](/guides/execution-modes#batch-mode).
 </Admonition>
 </CloudContent>
-Use sessions when you need dedicated and exclusive access to the QPU.
-<LegacyContent>
-<Admonition type="note">
-Session execution mode is not supported in the Open Plan. Jobs will run in job mode instead.
-</Admonition>
-</LegacyContent>
-<CloudContent>Note that Open Plan users cannot submit session jobs.</CloudContent>
 
+Use sessions when you need dedicated and exclusive access to the QPU.
 
 ## Set up to use sessions
 
