change backend name to Fez

--- a/docs/guides/q-ctrl-performance-management.ipynb
+++ b/docs/guides/q-ctrl-performance-management.ipynb
@@ -225,7 +225,7 @@
     "\n",
     "service = QiskitRuntimeService()\n",
     "instance = service.active_account()[\"instance\"]\n",
-    "backend_name = service.least_busy().name"
+    "backend_name = \"ibm_fez\""
    ]
   },
   {
