--- a/docs/migration-guides/qiskit-runtime.mdx
+++ b/docs/migration-guides/qiskit-runtime.mdx
@@ -33,7 +33,7 @@ to operate on a familiar data format and focus on the bigger picture.
 As access to QPUs became more widespread, and with more quantum algorithms being developed,
 again the need for a higher-level abstraction emerged. In response, IBM introduced
 the Qiskit [primitives interface](/guides/primitives), which are optimized for two core tasks in quantum algorithm development:
-expectation value estimation (Estimator) and circuit sampling (Sampler). The goal is once
+expectation value estimation (`Estimator`) and circuit sampling (`Sampler`). The goal is once
 again to help developers to focus more on innovation and less on data conversion.
 
 For backward compatibility, the `backend.run` interface continues to exist in Qiskit. However, it is no longer supported
